src/objects/StudentProcess__c.object
<CustomObject>
    <fields>
        <fullName>IntentToReturn__c</fullName>
        <description>Picklist field used to indicate the likelihood of a student returning after withdrawal or term break.</description>
        <label>Intent to Return</label>
        <picklist>
            <picklistValues>
                <fullName>Very Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlikely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do No Re-Admit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsNSEStudent__c</fullName>
        <formula>Student__r.IsNSE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is NSE Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsThisRequestForAFutureTerm__c</fullName>
        <description>Picklist to indicate if the request is for a student&apos;s future term.</description>
        <label>Is This Request for a Future Term</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LDA__c</fullName>
        <inlineHelpText>Last Activity Date</inlineHelpText>
        <label>LDA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LT3Suspension__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox indicating whether or not the withdrawal was due to a Less than 3 CU academic suspension.</description>
        <label>LT3 Suspension</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastAAVDate__c</fullName>
        <description>A formula field that pulls in the student&apos;s last date of academic activity verification.</description>
        <formula>Student__r.LastDateOfAAV__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last AAV Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastAcademicActivityCheckedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup field to enter the name of the person who verified the last date of academic activity.</description>
        <label>Last Academic Activity Checked By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Student_Processes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastAcademicActivityDate__c</fullName>
        <description>A date field that indicates the student&apos;s last date of academic activity.</description>
        <inlineHelpText>Please enter the date that indicates the student&apos;s last date of academic activity.</inlineHelpText>
        <label>Last Academic Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastAcademicActivitySource__c</fullName>
        <description>Picklist allowing the user to enter in the source where the last date of academic activity was determined from.</description>
        <inlineHelpText>Please select the appropriate source where the last date of academic activity was determined from.</inlineHelpText>
        <label>Last Academic Activity Source</label>
        <picklist>
            <picklistValues>
                <fullName>academically related email initiated by the student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>attempted objective assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>attempted pre-assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>attendance in a conference call, study group or online chat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>clinical attendance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>documented academic phone call with the mentor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>engagement in a learning resource</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>last date of prior term with course enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>posting to a message board in a learning community</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>referring for an assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>submission of an assignment in a learning resource course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>submission of a task in TaskStream</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LDA is the day the student notified WGU of withdrawal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LastCumulativeSAP__c</fullName>
        <description>An open text field that allows the user to enter the student&apos;s last cumulative SAP percentage to review prior to making a readmission decision.</description>
        <label>Last Cumulative SAP</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <description>A formula field that pulls in the student&apos;s last name.</description>
        <formula>Student__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LateDrop__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox field indicating if the drop was submitted late.</description>
        <label>Late Drop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LateReferralDatesAndTimes__c</fullName>
        <description>Text area to hold the requested dates and times for a late referral / manual recheck request.</description>
        <label>Late Referral Dates and Times</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Length__c</fullName>
        <description>Picklist field used to indicate the length of time a student is granted to complete a course after their term end date.</description>
        <label>Length</label>
        <picklist>
            <picklistValues>
                <fullName>7 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>90 Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LetterSent__c</fullName>
        <label>Letter Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LetterWaived__c</fullName>
        <defaultValue>false</defaultValue>
        <description>A checkbox field indicating whether or not the student has been granted a waiver for submitting an appeal for readmission letter.</description>
        <label>Letter Waived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LicenseVerification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether or not we have a teacher license on file.</description>
        <inlineHelpText>Once the verified license is uploaded, please check the box.</inlineHelpText>
        <label>License Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LogACall__c</fullName>
        <formula>HYPERLINK(&quot;/00T/e?title=Call&amp;what_id=&quot;&amp;Id&amp;&quot;&amp;followup=1&amp;tsk5=Call&amp;RecordType=01230000000c59X&amp;ent=Task&amp;p2_lkid=&quot;&amp;Id&amp;&quot;&amp;retURL=/&quot;&amp;Id,IMAGE( 
&quot;/servlet/servlet.ImageServer?id=015a00000023DzU&amp;oid=00Df0000002MhY1&amp;lastMod=1369231472000&quot;,&quot;Log A Call&quot;),&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Log A Call</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoggedInUser__c</fullName>
        <formula>IF(  
ApprovingManager__r.FirstName &amp; &quot; &quot; &amp;  ApprovingManager__r.LastName =  $User.FirstName &amp; &quot; &quot; &amp;  $User.LastName,
 &quot;1&quot;,&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LoggedInUser</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCity__c</fullName>
        <description>A formula field that pulls in the student&apos;s mailing city.</description>
        <formula>Student__r.MailingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCountry__c</fullName>
        <description>A formula field that pulls in the student&apos;s mailing country.</description>
        <formula>Student__r.MailingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingStreet__c</fullName>
        <description>A formula field that pulls in the student&apos;s mailing street.</description>
        <formula>Student__r.MailingStreet</formula>
        <label>Mailing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingZip__c</fullName>
        <description>A formula field that pulls in the student&apos;s mailing zip code.</description>
        <formula>Student__r.MailingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mailing Zip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MentorAtTimeOfRequest__c</fullName>
        <description>Mentor name at the time the student process request was made. This field is populated through a workflow when the student process is created.</description>
        <label>Mentor At Time of Request</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MentorEmail__c</fullName>
        <description>The email Copied from the mentor contact</description>
        <label>Mentor Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MentorSupport__c</fullName>
        <description>A picklist field that indicates whether or not the prior mentor supports the readmission approval.</description>
        <label>Mentor Support</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mentor_Notes__c</fullName>
        <label>Mentor Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mentor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mentor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Student_Processes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <externalId>true</externalId>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NewCatalogTerm__c</fullName>
        <description>Text field that allows the user to enter in the new catalog term for Banner processing.</description>
        <label>New Catalog Term</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewDegreeProgramCatalog__c</fullName>
        <formula>NewDegreeProgram__r.CatalogTerm__c</formula>
        <label>New Degree Program Catalog</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewDegreeProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to reference WGU Degree Program for program code and catalog version used to request a program change.</description>
        <inlineHelpText>When selecting the correct Program, please also select the correct Catalog Version.</inlineHelpText>
        <label>New Degree Program</label>
        <referenceTo>WGUDegreeProgram__c</referenceTo>
        <relationshipLabel>Student Processes</relationshipLabel>
        <relationshipName>Student_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewExpectedGradDate__c</fullName>
        <description>Date field that allows users to select an appropriate new expected graduation date for National Student Clearinghouse reporting and Banner processing.</description>
        <label>New Expected Grad Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NewFeeAssessmentRate__c</fullName>
        <description>Picklist for users to select the fee assessment rate for new term Banner processing.</description>
        <label>New Fee Assessment Rate</label>
        <picklist>
            <picklistValues>
                <fullName>STAND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PART</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXMPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MILDO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NewMentorName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup field that indicates the new mentor name for the given student process.</description>
        <label>New Mentor Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Student_Processes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewProgCode__c</fullName>
        <description>Picklist field for choosing a program code</description>
        <label>New Prog Code</label>
        <picklist>
            <controllingField>College__c</controllingField>
            <picklistValues>
                <fullName>BSAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSBUHR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSBUITM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSMG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSMK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBAITM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBAMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSNU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSPRN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSRN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBAHM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSNUED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSNULM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSRNNUEDUG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSRNNUEDGR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSRNNULMUG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSRNNULMGR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSIT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSITND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSITNW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSITSEC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSITSF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSISA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSITNM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAECE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENDEDL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSEDL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAES</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NewProgramCode__c</fullName>
        <description>Text field for users to enter the new program code for Banner processing.</description>
        <label>New Program Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewProgramCollege__c</fullName>
        <description>A picklist field that indicates the college of the new program for the program change process.</description>
        <label>New Program College</label>
        <picklist>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Professions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teachers College</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NewStudentStatus__c</fullName>
        <description>Picklist field for users to select the appropriate new student status for Banner processing.</description>
        <label>New Student Status</label>
        <picklist>
            <picklistValues>
                <fullName>AS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NewStudentType__c</fullName>
        <description>Picklist for users to select the appropriate new student type for Banner processing.</description>
        <label>New Student Type</label>
        <picklist>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NewTimeStatus__c</fullName>
        <description>Picklist field that allows users to select the new time status for Banner processing.</description>
        <label>New Time Status</label>
        <picklist>
            <picklistValues>
                <fullName>Full Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Part Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NextScheduledCallDate__c</fullName>
        <description>Date field that allows users to enter in the next scheduled call date on the student process record.</description>
        <label>Next Scheduled Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NotificationForDocumentation__c</fullName>
        <description>Picklist field that is used in workflow rules to notify student of needed documentation to continue the student process.</description>
        <label>Notification for Documentation</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>NumberOfContactAttempts__c</fullName>
        <description>Total number of contact attempts</description>
        <label>Number of Contact Attempts</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberOfDaysToContact__c</fullName>
        <defaultValue>3</defaultValue>
        <description>Custom field that identifies the number of days a student has to contact student services before action will be taken on their academic record (e.g., withdrawal).</description>
        <label>Number of Days to Contact</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OldCatalogVersion__c</fullName>
        <description>A picklist field that indicates the catalog year prior to the program change being processed.</description>
        <label>Old Catalog Version</label>
        <picklist>
            <picklistValues>
                <fullName>201208</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201202</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201112</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201103</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201102</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201101</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200911</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200910</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200909</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200907</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200906</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200905</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200902</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200811</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200810</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200808</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200806</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200804</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200803</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200801</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>200709</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OutcomeStatus__c</fullName>
        <description>Refers to the outcome status of the student process and/or Banner form data;
Banner graduation (SHRDGMR_DEGS_CODE) outcome status.</description>
        <label>Outcome Status</label>
        <picklist>
            <picklistValues>
                <fullName>AW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress - Contacting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Withdrawal Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Counsel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recovered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Passed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OutreachEfforts__c</fullName>
        <description>Rich text field used to allow users to indicate the outreach efforts completed by the mentors or program manager.</description>
        <inlineHelpText>Explain your outreach efforts. Include the requested additional outreach (Course Mentor, Writing Mentor, SSC Mentor, Program Manager, etc…), the date inactive email was sent to the student, and the dates of any previous inactivity.</inlineHelpText>
        <label>Outreach Efforts</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PTaskActivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>P-Task Activated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PTaskDeactivated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>P-Task Deactivated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PTaskStatus__c</fullName>
        <description>Values to define if a record needs to be activated or deactivated from taskstream</description>
        <label>P-Task Status</label>
        <picklist>
            <picklistValues>
                <fullName>No Action Needed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Activated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deactivated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Activation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Deactivation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PraxisCheck1__c</fullName>
        <description>This picklist is used to determine if a Teacher&apos;s College student has passed the appropriate Praxis and/or State Licensure exams needs for graduation clearance.</description>
        <label>Praxis Check 1</label>
        <picklist>
            <picklistValues>
                <fullName>Cleared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Cleared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PraxisCheck2__c</fullName>
        <description>This picklist is used to determine if a Teacher&apos;s College student has passed the appropriate Praxis and/or State Licensure exams needs for graduation clearance.</description>
        <label>Praxis Check 2</label>
        <picklist>
            <picklistValues>
                <fullName>Cleared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Cleared</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exempt</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PraxisCleared__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box is used to indicate when a student&apos;s praxis check 1 and 2 have both been cleared.</description>
        <label>Praxis Cleared</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PraxisReviewNotes__c</fullName>
        <description>The purpose of this open text field is for the Records associate to make any important notes pertaining to the praxis check.</description>
        <label>Praxis Check Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PrevEffTerm__c</fullName>
        <description>Field used to indicate a previous effective term for Informatica processing</description>
        <label>Previous Effective Term</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PreviousInactivityIssues__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has this student had previous inactivity issues?</inlineHelpText>
        <label>Previous Inactivity Issues</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PreviousMentor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to reference the students previous mentor.  Used for various Records processes.</description>
        <label>Previous Mentor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Student_Processes3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreviousProgram__c</fullName>
        <description>The first program code assigned to this student, if different from the Program Code currently listed it is because the student submitted a program change request.</description>
        <label>Previous Program</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProcessInBanner__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This check box is used to indicate whether or not the student&apos;s graduation is to be processed in Banner.</description>
        <label>Process In Banner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ProcessedBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to indicate which user processed the request.</description>
        <label>Processed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>StudentProcesses5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProcessedDate__c</fullName>
        <description>Date the student process was pushed to Banner.</description>
        <label>Processed Date</label>
        <type>Date</type>
    </fields>
</CustomObject>